# optitrack_bridge

./: CMakeLists.txt  README.md  package.xml
include/: LinearKalmanFilter.h  NatNetWrapper.h
launch/: optitrack.launch
src/: LinearKalmanFilter.cpp  NatNetWrapper.cpp  SampleClient.cpp  optitrack_bridge_node.cpp
